# model_service

./: .gitignore  README.md  pyproject.toml
model_service/: app.py  dbmodels.py  manager.py
